Deployment/api_gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80         # Port exposed to you/other services
      targetPort: 3000 # Port your Go app listens on
  type: LoadBalancer      # Use NodePort or LoadBalancer if accessing from outside KIND
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: ansalps/chattr-api_gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
