Deployment/auth_service.yaml
# 3. THE SERVICE (The Networking "Entry Point")
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051

---
# 4. THE DEPLOYMENT (The "Brain" that runs your Go App)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: chattr-auth_svc:latest
        imagePullPolicy: IfNotPresent      # <--- ADD THIS to ensure it uses the local kind image
        ports:
        - containerPort: 50051
