Deployment/chat_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
      - name: chat-service
        image: ansalps/chattr-chat_svc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 50053
        # Loads all non-sensitive variables from the ConfigMap
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: cert-volume
          mountPath: "/etc/certs"
          readOnly: true
      volumes:
      - name: cert-volume
        secret:
          secretName: post-relation-secret
          items:
          - key: KAFKA_CA_CERT
            path: ca.pem
          - key: KAFKA_ACCESS_CERT
            path: service.cert
          - key: KAFKA_ACCESS_KEY
            path: service.key
