Deployment/post_relation_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-relation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-relation-service
  template:
    metadata:
      labels:
        app: post-relation-service
    spec:
      containers:
      - name: post-relation
        image: chattr-post_svc:latest
        imagePullPolicy: Never # Critical for KIND to use local image
        ports:
        - containerPort: 50052
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: cert-volume
          mountPath: "/etc/certs"
          readOnly: true
      volumes:
      - name: cert-volume
        secret:
          secretName: post-relation-secret
          items:
          - key: KAFKA_CA_CERT
            path: ca.pem
          - key: KAFKA_ACCESS_CERT
            path: service.cert
          - key: KAFKA_ACCESS_KEY
            path: service.key
---
apiVersion: v1
kind: Service
metadata:
  name: post-relation-service
spec:
  selector:
    app: post-relation-service
  ports:
  - protocol: TCP
    port: 50052
    targetPort: 50052
  type: ClusterIP
